Start up process

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 The project is neighborhood social web for me!
+It is based vagrant program!
+you must start if you use these code.
+1) vagrant box add neighborhood neighborhood.box
+2) vagrant up.
